--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -13,6 +13,14 @@
 
 
 
+%%% Теоремы, Определения
+\usepackage{amsthm}
+
+\theoremstyle{definition} % "Определение"
+\newtheorem{definition}{Определение}[section]
+
+
+
 \usepackage{tikz}
 
 
