--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -21,6 +21,14 @@
 
 
 
+%%% Форматирование
+% Выделение + курсив к куску текста
+\newcommand{\bi}[1]{%
+	\textbf{\textit{#1}}%
+}
+
+
+
 \usepackage{tikz}
 
 
