добавлена классификация моделей

--- a/src/chapter-1.tex
+++ b/src/chapter-1.tex
@@ -1,3 +1,27 @@
 % !TEX root = main.tex
 
 \section{Общие понятия}
+
+\section{Классификация моделей}
+
+\begin{enumerate}
+	\item материальные;
+	\begin{enumerate}
+		\item физические;
+		\item геометрические;
+		\item аналоговые;
+	\end{enumerate}
+	\item абстрактные;
+	\begin{enumerate}
+		\item интуитивные;
+		\item символьные;
+		\item графические;
+		\item математические;
+		\begin{enumerate}
+			\item функциональные;
+			\item идентификационные;
+			\item имитационные;
+		\end{enumerate}
+	\end{enumerate}
+	\item модели суждения.
+\end{enumerate}
