добавлен вычислительный и реальный эксперимент

--- a/src/chapter-1.tex
+++ b/src/chapter-1.tex
@@ -2,6 +2,14 @@
 
 \section{Общие понятия}
 
+Изначально существовал только \textit{натурный или реальный эксперимент}, т.\,е. эксперимент, который проводился над реальными вещами или существами в жизни. Эволюцией данного эксперимента является \textit{вычислительный эксперимент}. Данный эксперимент основывается на моделях. Чтобы произвести вычислительный эксперимент необходим программный комплекс, а в свою очередь для программного комплекса нужны алгоритмы, которые основаны на методах. Методы описывают расчётную схему, которая близка к реальному объекту. Таким образом примитивный вычислительный эксперимент строиться следующим образом:
+
+\[
+	\text{объект} \to \text{расчётная схема} \to \text{методы} \to \text{алгоритмы} \to \text{программа, отладка}
+\]
+
+Вычислительный эксперимент в конечном счёте существенно экономит время и затраты, в отличие от реального эксперимента.
+
 \section{Классификация моделей}
 
 \begin{enumerate}
