--- a/src/chapter-1.tex
+++ b/src/chapter-1.tex
@@ -33,3 +33,58 @@
 	\end{enumerate}
 	\item модели суждения.
 \end{enumerate}
+
+
+
+
+вторая лекция
+
+третья лекция
+
+\begin{enumerate}
+	\item Аппроксимация функций:
+	\begin{enumerate}
+		\item Интерполяция:
+		\begin{enumerate}
+			\item Линейная:
+			\begin{enumerate}
+				\item Полином Ньютона;
+				\item Полином Лагранжа;
+				\item Полином Эрмита;
+				\item Сплайнами;
+			\end{enumerate}
+			\item Нелинейные;
+		\end{enumerate}
+		\item Наилучшее среднеквадратичное приближение;
+	\end{enumerate}
+	\item Численное дифференцирование
+	\begin{enumerate}
+		\item Дифференцирование полинома;
+		\item Сеточные формулы (на основе разложения в ряды Тейлора);
+		\item Дифференцирование предварительно сглаженной кривой;
+	\end{enumerate}
+	\item Численное интегрирование:
+	\begin{enumerate}
+		\item Формула Ньютона---Котеса;
+		\item Метод Гаусса;
+		\item Метод Рунге;
+	\end{enumerate}
+	\item Решение СЛАУ:
+	\begin{enumerate}
+		\item Прямые методы (класс Гаусса);
+		\item Итерационные;
+	\end{enumerate}
+	\item Обычное дифференциальное уравнение (ОДУ):
+	\begin{enumerate}
+		\item Задачка Коши;
+		\item Краевая задача;
+	\end{enumerate}
+	\item Уравнение в частных производных (УЧП)
+	\begin{enumerate}
+		\item Эллиптические $\underbrace{\frac{\delta^2 U}{\delta x_1^2} + \frac{\delta^2 U}{\delta x^2_2} + \frac{\delta^2 U}{\delta x^2_3}}_{\Delta U} = f(x_1\, x_2\, x_3\, U)$;
+		\item Параболические $\displaystyle\frac{\delta U}{\delta t} = \Delta U + f(x_1\, x_2\, x_3\, U)$;
+		\item Гиперболические $\displaystyle\frac{\delta^2 U}{\delta t^2} = \Delta U + f(x_1\, x_2\, x_3\, U)$;
+	\end{enumerate}
+	\item Интегро-дифференциальные уравнения.
+\end{enumerate}
+
