--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -5,7 +5,7 @@
 \usepackage[utf8]{inputenc}			% кодировка исходного текста
 \usepackage[english, russian]{babel}	% локализация и переносы
 \usepackage{color} 				 	% цветные буковки
-
+\usepackage{cmap}
 
 
 %%% AMS
@@ -17,7 +17,7 @@
 \usepackage{amsthm}
 
 \theoremstyle{definition} % "Определение"
-\newtheorem{definition}{Определение}[section]
+\newtheorem{defn}{Определение}[section]
 
 
 
