--- a/src/chapter-1.tex
+++ b/src/chapter-1.tex
@@ -88,3 +88,780 @@
 	\item Интегро-дифференциальные уравнения.
 \end{enumerate}
 
+
+
+\section{Корректность постановки задачи}
+
+\begin{defn}
+	Если решение существует, единственно и устойчиво по входным данным.
+\end{defn}
+
+\begin{defn}
+	Устойчивость по входным данным --- конечное значение полученное по входным достоверно.
+\end{defn}
+
+Примеры не устойчивости
+\begin{align*}
+	&y = A\,x 
+	\\
+	&y + \delta y = A(x + \delta y)
+	\\
+	&\delta y = A(x + \delta x) - A\,x
+	\\
+	&\delta y \to 0 \qquad \text{при } \delta x \to 0
+	\\
+	&u = y', \qquad \biggl(y + \underbrace{\frac{1}{n} \sin^2 x}_{\delta y}\biggr)' = u + \delta u, \qquad \delta u = n \cos^2 x
+	\\
+	&n \to \infty \qquad \delta y \to 0 \qquad \delta u \to \infty
+\end{align*}
+
+\begin{align*}
+	&\frac{\delta^2 u}{\delta x^2} + \frac{\delta^2 u}{\delta y^2} = 0
+	\\
+	&u(x, y), \qquad u(x, 0) = 0, \qquad \frac{\delta u(x, 0)}{\delta y} = \varphi(x):
+	\\
+	&\varphi(x) = 0, \Rightarrow u(x, y) = 0;
+	\\
+	&\varphi(x) = \frac{1}{n}\cos nx \Rightarrow u(x, y) = \frac{1}{n^2}\cos nx \cdot \sin ny;
+\end{align*}
+
+\noindent
+Структура (виды) погрешности:
+\begin{itemize}
+	\item погрешность модели;
+	\item погрешность исходных данных (неустранимая погрешность);
+	\item погрешность метод;
+	\item погрешность округления.
+\end{itemize}
+
+
+
+\section{Математические модели на основе ОДУ}
+
+\begin{defn}
+	Одна независимая переменная (к примеру время или координата)
+\end{defn}
+
+\[
+	F(x, u, u', u'', \dots u^{(n)}) = 0
+\]
+
+\begin{align*}
+	u' + p(x) u = f(x)
+	\\
+	u(x) = \varphi(x)
+\end{align*}
+
+\begin{defn}
+	Замена переменных в дифференциальном уравнения $n$-го порядка может быть сведена к системе $n$ дифференциальных уравнений.
+\end{defn}
+
+\begin{align*}
+	&u^{(k)} = u_k
+	\\
+	&u'_k = u^{(k)'} = u^{k+1} = u_{k+1}
+	\\
+	&u'_k = u_{k+1}
+	\\
+	&\begin{cases}
+		u'_k = u_{k+1}
+		\\
+		F(x, u, u_1, u_2, \dots, u'_{n-1}) = 0
+	\end{cases}
+	\\
+	&u'(x) = f(x, u(x))
+	\\
+	&u \to \begin{pmatrix}
+	u_1 \\
+	u_2 \\
+	\dots \\
+	u_n
+	\end{pmatrix} = \overline{u}, \qquad 
+	f \to \begin{pmatrix}
+	f_1 \\
+	f_2 \\
+	\dots \\
+	f_n
+	\end{pmatrix} = \overline{f}
+\end{align*}
+
+Общий вид системы ОДУ первого порядка $u'_k = f_k(x, u_1, u_2, \dots, u_n), \quad k = \overline{1, n}$
+
+\begin{align*}
+	u_(x) u'''(x) + b(x) u''(x) + c(x) u'(x) + d(x) u(x) = f(x) 
+	\\
+	u(x) = ?
+\end{align*}
+
+\begin{align*}
+	&u^{(k)} = u_k
+	\\
+	&\begin{cases*}
+		u' = u_1\\
+		u'_1 = u_2\\
+		u(x) u'_2(x) + b(x) u_2(x) + c(x) u_1(x) + d(x) u(x) = f(x)
+	\end{cases*}
+\end{align*}
+
+Для ОДУ существует две постановки задачи
+\begin{itemize}
+	\item задача Коши: все условия ставятся в одной точке, применительно к задаче выше
+	\[
+		u_k(\psi) = \eta_{k_1}, \quad k = 1, \dots n
+	\]
+	\item краевая задача: для порядка выше 1, либо для системы в которой больше чем одно уравнение.
+\end{itemize}
+
+\subsection{Методы решения ОДУ}
+
+\begin{enumerate}
+	\item точные методы, $\displaystyle u'(x) = \frac{u - x}{u + x}$
+	\item приближённо аналитические методы (метод Пикара)
+	\item численные методы (задача Коши)
+\end{enumerate}
+
+\subsubsection{Метод Пикара}
+
+\[
+	\begin{cases*}
+		u'(x) = f(x, u(x))\\
+		u(\psi) = \eta;
+	\end{cases*}
+\]
+
+\begin{align*}
+	&du = f(x, u(x))\, dx
+	\\
+	&u(x) = u(\psi) + \int_{\psi}^{x} f(t, u(t))\, dt
+	\\
+	&y^{(1)} = \eta + \int_{\psi}^{x} f(t, y^{()}(t)\, dt
+	\\
+	&y^{(0)}(x) = \eta
+	\\
+	&z^{(1)}(x) = y^{(1)}(x) - u(x)
+	\\
+	&|z^{(1)}(x)| = \int_{\psi}^{x} |f(t, y^{()}(t)) - f(t, u(t)) |\, dt
+	\\
+	&|x - \psi | \leq a, \quad |u - \eta| \leq b
+\end{align*}
+
+Рассмотрим область $	|x - \psi | \leq a, \quad |u - \eta| \leq b$. Пусть правая часть удовлетворяет условию Липшеца по второму аргументу, т.е. $|f(x, u_q) - f(x, u_2)| \leq L |u_1 - u_2|$
+
+\begin{align*}
+	&|z^{(1)}(x)| \leq L \int_{\psi}^{x} |y^{()}(t) - u(t)|\, dt = L \int_{\psi}^{x} |z^{()}|
+	\\
+	&|z^{(1)}(x)| \leq \int_{x}^{\psi} b\, dt = L\, b|\psi - x|
+	\\
+	&|z^{(2)}| \leq L^2 b\int_{\psi}^{max}
+\end{align*}
+...
+
+\subsubsection{Задачка Коши}
+
+Строиться разностная сетка в области, которой ищется решение
+
+\begin{align*}
+  \psi \leq x \leq X
+	\omega_n = \{ x_n: \psi=x_0 < x_1 < \dots < x_N = X \}
+\end{align*}
+
+Узлы $x_0, \dots, x_n$. Равномерная сетка $\omega_x = \{ x_n: x_n = x_0 + n\,h, n = 1, \dots, N \}$
+\begin{align*}
+	&u(x) \sim y_n \quad y_n = y(x_n)
+	\\
+	&x_n = x_0 + n\,h, \quad h \to 0, n \to \infty \Rightarrow |u(x_n) - y_n| \to 0
+\end{align*}
+
+
+\subsubsection{Методы Рунге-Кутта}
+
+\begin{align*}
+	u_{n+1} = u_n + h_n u_n + \frac{h_n}{2!} u''_n + \dots
+	\\
+	u'_n = u'(x_n) = f(x_n, u_n)
+	\\
+	u''_n = (u')'_x = f'_x + f'_u f |_{X_n}
+	\\
+	u_{n+1} = u_n + h_n f(x_n, u_n) + \frac{h_n}{2}(f'_x + f'_u f)_{X_n} + \dots
+\end{align*}
+
+Рунге-Кутта 1го порядка (метод Эйлера)
+
+\begin{align*}
+	u_{n+1} = u_n + h_n f(x_n, u_n)
+	\\
+	y_{n+1} = y_n + h_n f(x_n, y_n)
+	\\
+	|y_n - u(x_n)| = o(h)
+\end{align*}
+
+Рунге-Кутта 2го порядка
+
+Рунге-Кутта 4го порядка
+Применяют как правило её.
+
+\begin{align*}
+	&y_{n+1} = y_n + \frac{h}{6}(k_1 + 2k_1 + 2k_3 + k_4) + O(h^4)
+	\\
+	&k_1 = f(x_n,y_n);
+	\\
+	&k_2 = f(x_n + \frac{h}{2}, y_n + \frac{h}{2}k_1);
+	\\
+	&k_3 = f(x_n + \frac{h}{2}, y_n + \frac{h}{2}k_2)
+	\\
+	&k_4 = f(x_n + \frac{h}{2}, y_n + h\,k_3)
+\end{align*}
+
+Рунге Кутта 4го порядка точности эквивалентна формуле Симпсона если без $y$
+
+$\frac{1}{3}(\frac{h}{2})(f(x_n) + 4f(x_n) + f(x_{n+1})$
+
+Обобзение
+\begin{align*}
+	\begin{cases*}
+		u'(x) = f(x, u(x), v(x))\\
+		v'(x) = Q(x, u(x), v(x))
+	\end{cases*}
+	\\
+	u(\psi) = \eta_1, v(\psi) = \eta_2, \psi \leq x \leq X
+\end{align*}
+
+\begin{align*}
+	y_{n+1} = y_n + \frac{h}{6} (k_1 + 2k_2 + 2k_3 + k_4)
+	\\
+	z_{n+1} = z_n + \frac{h}{6} (q_1 + 2q_2 + 2q_3 + q_4)
+\end{align*}
+где
+\begin{align*}
+	&k_1 = f(x_n, y_n, z_n), &q_1 = \varphi(x_n, y_n, z_n) \\
+	&k_2 = f(x_n + \frac{h}{2}, y_n + h \frac{k_1}{2}, z_n + h \frac{q_1}{2}), &q_2 = \varphi(x_n + \frac{h}{2}, y_n + h \frac{k_1}{2}, z_n + h \frac{q_1}{2}) \\
+	&k_3 = f(x_n + \frac{h}{2}, y_n + h \frac{k_2}{2}, z_n + h \frac{q_2}{2}), &q_3 = \varphi(x_n + \frac{h}{2}, y_n + h \frac{k_2}{2}, z_n + h \frac{q_2}{2}) \\
+\end{align*}
+
+
+Задача Коши система уравнений первого порядка
+
+
+
+\paragraph{Сгущение сетки}
+
+
+
+
+
+
+
+\subsection{Многошаговые методы}
+
+\begin{align*}
+	&U'(x) = f(x, U(x))
+	\\
+	&\frac{a_0 y_n + a_1 y_{n-1} + \dots + a_m y_{n-m}}{h} = b_0 f(x_n, y_n) + b_1 f(x_{n-1}, y_{n-1}) + \dots + b_m f(x_{n-m}, y_{n-m})
+	\\
+	&n = m, m+1, \dots
+\end{align*}
+
+В качестве примера
+\subsubsection{Метод Адамса}
+
+Известны $n-4, n-3, \dots n$ узлы
+
+\begin{align*}
+	&U'(x) =  f(x, U(x))
+	\\
+	&U_{n} = U_{n-1} + \int_{x_{n-1}}^{x_{n}} f(x, U(x))\, dx = U_{n-1} + \int_{x_{n-1}}^{x_n} F(x)\, dx
+\end{align*}
+
+Ньютоном
+
+\begin{multline*}
+	F(x) = F(x_{n-1}) + (x-x_{n-1})F(x_{n-1}, x_{n-2}) + \\
+		+ (x - x_{n-1})(x - x_{n-2})F(x_{n-1}, x_{n-2}, x_{n-3}) + \\
+		+ (x - x_{n-1})(x - x_{n-2})(x - x_{n-3})F(x_{n-1}, x_{n-2}, x_{n-3}, x_{n-4}) 
+\end{multline*}
+
+\begin{multline*}
+	y_n = y_{n-1} + h_{n-1} F(x_{n-1}) + \frac{1}{2} h^2_{n-1} F(x_{n-1}, x_{n-2}) + \\
+	+ \frac{1}{6} h^2_{n-1} (2h_{n-1} + 3h_{n-2})F(x_{n-1}, x_{n-2}, x_{n-3}) + \\
+	+ \frac{1}{12} h^2_{n-1} (3h^2_{n-1} + 8 h_{n-1}h_{n-2} + 4h_{n-1}h_{n-3} + 6 h^2_{n-2} + 6h_{n-2}h_{n-3}) F(x_{n-1}, x_{n-2}, x_{n-3}, x_{n-4}) 
+\end{multline*}
+
+\[
+	h_n = x_n - x_{n-1}
+\]
+
+\begin{align*}
+	&F(x_{n-1}, x_{n-2}, x_{n-3}, x_{n-4}) = \frac{F(x_{n-1}, x_{n-2}, x_{n-3}) - F(x_{n-2}, x_{n-3}, x_{n-4})}{x_{n-1} - x_{n-4}}
+	\\
+	&F(x_{n-1}, x_{n-2}) = \frac{F(x_{n-1}) - F(x_{n-2})}{x_{n-1} - x_{n-2}}
+	\\
+	&o(h^4)
+\end{align*}
+
+
+\subsection{Неявные методы}
+
+Введение
+
+\begin{align*}
+&U'(x) = -\alpha U, \quad f(x, U) = -\alpha U, \alpha > 0
+\\
+&\frac{dU}{U} = -\alpha\, dx
+\\
+&U() = U_n e^{-\alpha x}
+\\
+&y_{n+1} = y_n + hf(x_n, y_n) = y_n - h\alpha y_n = y_n(1 - h\alpha), \quad h < \frac{1}{\alpha}
+\end{align*}
+
+\begin{align*}
+	&y_{n+1} = y_n + h f(x_{n+1}, y_{n+1}) = y_n - h\alpha y_{n+1}
+	\\
+	&y_{n+1} = \frac{y_n}{1 + h\alpha}
+\end{align*}
+
+\begin{enumerate}
+	\item Метод трапеций
+	\begin{align*}
+	&U'(x) =  f(x, U(x))
+	\\
+	&U_{n+1} = U_{n} + \int_{x_{n}}^{x_{n+1}} f(x, U(x))\, dx
+	\\
+	&y_{n+1} = y_n + \frac{h}{2}\Bigl[f(x_n, y_n) + f(x_{n+1}, y_{n+1})\Bigr], \quad O(h^2) h \to 0
+	\end{align*}
+	\item Методы Гира
+	\[
+		\sum_{k = 0}^{m} a_k y_{n-2} = h f(x_n, y_n)
+	\]
+	\begin{align*}
+			&m = 2 &\frac{3}{2} y_n - 2 y_{n-1} + \frac{1}{2} y_{n-2} = h f(x_n, y_n), O(h^2)
+			\\
+			&m = 3 &\frac{11}{6} y_n - 3 y_{n-1} + \frac{3}{2} y_{n-2} - \frac{1}{3} y_{n-3} = h f(x_n, y_n), O(h^3)
+	\end{align*}
+\end{enumerate}
+
+\subsection{Лабораторная работа 2}
+
+\begin{align*}
+	\begin{cases*}
+		\frac{dI}{dt} = \frac{U_c - (R_k + R_p(I))}{L_k}\\
+		\frac{dU_c}{dt} = - \frac{I}{C_k}
+	\end{cases*}
+	\quad t = 0,\; I = I_0 = 0.5,\; U_c = U_{c0} = 3000
+\end{align*}
+
+Применим неявный метод трапеций. Проинтегрируем правую часть уравнения
+\begin{align*}
+	&\begin{cases*}
+		I_{n+1} = I_n + \frac{\tau}{2 L_k} [U_{c_n} - (R_k + R_p(I_n)) I_n + U_{c_{n+1}} - (R_k + R_p(I_{n+1})) I_{n+1}]\\
+		U_{c_{n+1}} = U_{c_n} - \frac{\tau}{2C_k} [ I_n + I_{n+1} ]
+	\end{cases*}
+	\\
+	&R_p = \frac{L}{2\Pi \int \sigma}
+	\\
+	&I^{s}_{n+1} = \frac{\frac{\tau}{L_k} U_{c_n} + [  1 - \frac{0.25 \tau^2}{L_k C_k} - \frac{0.5 \tau}{L_k} (R_k + R_p(I_n))  ] I_n  }{  \frac{0.25\tau^2}{L_k C_k} + \frac{0.5 \tau}{L_k} ( R_k + R_p(I^{s-1}_{n+1}) ) + 1    }
+	\\
+	&\left|\frac{I^{(s)}_{n+1} - I^{(s-1)}_{n+1}}{I^{(s)}_{n+1}}\right| < \varepsilon \approx 10^{-4}
+	\\
+	&\left|\frac{R(I^{(s)}_{n+1}) - R(I^{(s-1)}_{n+1})}{R(I^{(s)}_{n+1})}\right| < \varepsilon \approx 10^{-2}
+\end{align*}
+
+
+\section{Краевые задачи (ОДУ)}
+
+\begin{align*}
+&u'_k =f'_k(x_1, u_1, u_2, \dots, u_p), \quad k = \overline{1, p}\\
+&\varphi_k (u_1(\xi_k), u_2(\xi_k), \dots, u_p(\xi_k)) = 0, \quad k = \overline{1, p} \\
+&a \leq \xi_k \leq b
+\end{align*}
+
+В краевой задаче, дополнительное условие задаётся более чем в одной точке
+
+
+\subsection{Разностный метод решения}
+
+\begin{align*}
+	\begin{cases}
+		u''(x) - p(x)u(x) = f(x)\\
+		u(a) = \alpha\\
+		u(b) = \beta\\
+		a \leq x \leq b
+	\end{cases}
+\end{align*}
+
+Заменим вторую производную --- разностью.
+
+\begin{align*}
+u'(x) = \frac{u_{n-1} - 2 u_n + u_{n+1}}{h^2} - \frac{1}{12}h^2 u''''(\xi), \quad x_{n-1} < \xi < x_{n+1} (1)
+\end{align*}
+\begin{align*}
+&\frac{y_{n-1} - 2y_n + y_{n+1}}{h^2} - p_n y_n = f_n, \quad f_n = f(x_n),\; p_n = p(x_n),\; p(x) > 0
+\\
+&y_{n-1} - 2y_n + y_{n+1} - p_x h^2 y_n = h^2 f_n
+\end{align*}
+
+\begin{align*}
+\begin{cases}
+	y_{n-1} - (2 + p_n h^2) y_n + y_{n+1} = h^2 f_n, \quad n = 1, \dots, N - 1\\
+	y_0 = \alpha\\
+	y_N = \beta
+\end{cases}
+\end{align*}
+
+Решение существует и единственно, находится методом прогонки. (Матрица трёхдиагональная).
+
+\paragraph{Метод прогонки}
+
+\begin{align*}
+&x_0 y_0 + M_0 y_1 = P_0, &K_N y_{N-1} - M_N y_N = P_N
+\end{align*}
+
+\begin{align*}
+	&A_n y_{n - 1} - B_n y_n + C_n y_n = -F_n, \\
+	&y_n = \xi_{n+1} y_{n+1} + \eta_{n+1} \\
+	&y_{n-1} = \xi_n y_n + \eta_n (2) \\
+	&A_n \xi_n y_n + A_n \eta_n - B_n y_n + C_n y_{n+1} = - F_n \\
+	&y_n = \frac{C_n}{B_n - A_n \xi_n} y_{n+1} + \frac{F_n + A_n \eta_n}{B_n - A_n \eta_n}
+\end{align*}
+Сравним с $y_n = \xi_{n+1} y_{n+1} + \eta_{n+1}$ видим
+\begin{align*}
+	\xi_{n+1} = \frac{C_n}{B_n - A_n \xi_n}, \eta_{n+1} = \frac{F_n + A_n \xi_n}{B_n - A_n \xi_n} (3)
+\end{align*}
+при $n = 0$, $y_n = \xi_{n+1} y_{n+1} + \eta_{n+1}$
+\begin{align*}
+y_0 = \xi_1 y_1 + \eta_1
+\end{align*}
+кроме того
+\begin{align*}
+&y_0 = - \frac{M_0}{K_0} y_1 + \frac{P_0}{K_0}\\
+&\xi_1 = \frac{M_0}{K_0}, \quad \eta_1 = \frac{P_0}{K_0} (4)
+\end{align*}
+при $n = N-1$
+\begin{align*}
+\begin{cases}
+	y_{N-1} = \xi_N y_N + \eta_N\\
+	K_N y_{n-1} + M_N y_N = P_N
+\end{cases}
+\end{align*}
+
+\begin{align*}
+&K_N \xi_N y_N + K_N \eta_N + M_N y_N = P_N\\
+&y_N = \frac{P_N - K_N \eta_N}{K_N \xi_N + M_N} (5)
+\end{align*}
+
+\paragraph{Алгоритм расчёта}
+
+по 4 находим , по 3 находим, по 5 находим $y_N$, по формуле 2 находим
+
+\paragraph{Как решать при сложных краевых условиях}
+
+при $x = a$
+\subparagraph{Случай 1}
+\begin{align*}
+	&u'(a) = \gamma u(a) + \delta\\
+	&\frac{y_1 - y_0}{h} = \gamma y_0 + \delta\\
+	&(\gamma h + 1) y_0 - y_1 = -h\delta,\\
+	&K_0 = \gamma h + 1,\; M_0 = -1,\; P_0 = - h\delta
+\end{align*}
+
+\subparagraph{Случай 2}
+\begin{align*}
+&u'(a) = \delta\\
+&\frac{y_1 - y_0}{h} = \delta\\
+&y_0 - y_1 = - h\delta\\
+& K_0 = 1, M_0 = -1, P_0 = - h\delta
+\end{align*}
+
+\paragraph{Сходимость решения к точному}
+\begin{align*}
+Z_n = y_0 - u_n, \quad u_n = u(x_n)
+\end{align*}
+
+Разностное уравнение имеет вид
+
+\[
+	y_{n-1} - (2 + p_n h^2) y_n + y_{n+1} = h^2 f_n (6)
+\]
+
+В исходное уравнение подставим (1)
+
+\begin{align*}
+&\frac{u_{n-1} - 2u_n + u_{n+1}}{h^2} - \frac{1}{12}h^2 u''''(\xi) - p_n u_n = f_n\\
+&u_{n-1} - (2+ p_nh^2)u_n - u_{n+1} = h^2f_n + \frac{1}{12} h^4 u''''(\xi) (7)
+\end{align*}
+
+вычтем из (6) (7)
+
+\begin{align*}
+Z_n = y_n - u_n \\
+z_{n-1} - (2 + p_n h^2) z_n + z_{n+1} = - \frac{1}{12} h^4 u''''(\xi)
+\end{align*}
+
+выберем точку в которой погрешность максимальна
+
+\[
+	n = m \quad |z_m| = \max\limits_{0 \leq n \leq N} |z_n|
+\]
+
+\begin{align*}
+&(2 + p_m h^2)|z_m| \leq |z_{m-1}| + |z_{m+1}| + \frac{1}{12} h^4 |u''''(\xi)|\\
+&(2 + p_m h^2)|z_m| \leq 2|z_m| + \frac{1}{12} h^4 |u''''(\xi)|\\
+&|z_m| \leq \frac{h^4}{12 h^2} |\frac{u''''(\xi)}{p_m}| = o(h^2)\\
+& \text{при } n \to 0, |z_m| = |y_m - u_m| \to 0
+\end{align*}
+	
+	
+	
+	
+	
+	
+	
+	
+
+
+% lection begin
+
+Рассмотрим более реалистичной вариант уравнения
+
+\begin{align*}
+\frac{d}{dx} \left(k(x) \frac{du}{dx}\right) - p(x)\,u + f(x) = 0
+\end{align*}
+где $k(x)$, $p(x)$, $f(x)$ заданы
+
+Для получения разностной схемы применим \emph{интегро-интерполяционный метод} заключающийся в том, что уравнение интегрируется на сетке.
+
+На основе трехточечного шаблона $n-1, (n-\frac{1}{2}) , n, (n+\frac{1}{2}), n+1$ будем строить схему.
+
+\begin{align*}
+\begin{cases}
+F = -k(x)\frac{du}{dx} \quad (1)\\
+- \frac{dF}{dx} - p(x) u + f(x) = 0 \quad (2)
+\end{cases}
+\end{align*}
+
+\[
+	- \int_{x_n - 1/2}^{x_n + 1/2} \frac{dF}{dx} dx - \int_{x_n - 1/2}^{x_n + 1/2} p(x) u(x) dx + \int_{x_n - 1/2}^{x_n + 1/2} f(x)\, dx = 0
+\]
+
+\[
+	-F_{n+1/2} + F_{n-1/2} - p_n y_n h + f_n h = 0 \quad (3)
+\]
+\[
+	p_n = p(x_n), \quad f_n = f (x_n)
+\]
+
+из (1)
+
+\begin{align*}
+	&\int_{x_n}^{x_n + 1} \frac{F}{k(x)} dx = - \int_{x_n}^{x_n + 1} \frac{du}{dx} dx, &F_{n+1/2} \int_{x_n}^{x_n + 1} \frac{dx}{k(x)} = y_n - y_{n+1}
+\end{align*}
+
+\[
+	F_{n+1/2} = \chi_{n+1/2} \frac{y_n - y_{n+1}}{n}, \quad \text{где}
+\]
+
+$\chi_{n+1/2} = \frac{h}{\int_{x_n}^{x_n + 1} \frac{dx}{k(x)}}$
+
+\[
+	\chi_{n+1/2} = \frac{h}{\frac{h}{2}(\frac{1}{k_{n+1}} + \frac{1}{k_n})} = \frac{2k_{n+1}k_n}{k_n + k_{n+1}}
+\]
+
+или
+
+\[
+	\chi_{n+1/2} = \frac{h}{\frac{1}{k_{n + 1/2}} h} = k_{n+1/2} \frac{k_n}{den}
+\]
+
+По аналогии
+
+\[
+	F_{n-1/2} = x_{n-1/2} \frac{y_{n-1} - y_n}{h}
+\]
+
+\[
+	\chi_{n-1/2} \frac{y_{n-1} - y_n}{h} - \chi_{n + 1/2} \frac{y_{n} - y_{n+1}}{h} - p_n y_n h + f_n h = 0
+\]
+
+\[
+	A_n y_{n-1} - B_n y_n + C_n y_{n+1} = - F_n \quad \text{где} (5)
+\]
+
+\begin{itemize}
+	\item $A_n = \chi_{n-1/2}$;
+	\item $C_n = \chi_{n + 1/2}$;
+	\item $B_n  = A_n + C_n + p_n h^2$;
+	\item	$F_n = f_n h^2$;
+	\item	$|B_n| > |A_n| + |C_n|$;
+\end{itemize}
+
+
+\paragraph{Поставим граничные условия} $x = 0$, $-k \frac{du}{dx} = F_0$, $F_0 = F_{t0}$
+
+\[
+\chi_{n-1/2} \frac{u_{n-1 - u_n}}{h} - \chi_{n+1/2} \frac{u_n - u_{n+1}}{h} - p_n u_n h + f_n h = \psi, \quad \psi = O(h^2)
+\]
+
+\[
+	u_{n \pm 1} = u_n \pm h u' + \frac{h^2}{2!} u'' \pm \frac{h^3}{3!}u''' ...
+\]
+
+Исходное разностное уравнение (5) имеет второй порядое точности (это следует из анализа невязки) Получим при $x=0$ второго порядка точности. Для этого проинтегрируем уравнение 2, на отрезке $[0, 1/2]$
+
+\[
+	- \int_{0}^{x_{1/2}} \frac{dF}{dx} dx - \int_{0}^{x_{1/2}} p(x) u(x) d(x) + \int_{0}^{x_{1/2}} f(x)\, dx = 0
+\]
+
+\[
+	F_0 - F_{1/2} + \frac{h}{2} \frac{1}{2} (p_0 y_0 + p_{1/2} y_{1/2}) + \frac{h}{2} \frac{1}{2} (f_0 + f_{1/2}) = 0
+\]
+
+\[
+	F_{1/2} = \chi_{1/2} \frac{y_0 - y_1}{h}
+\]
+
+\[
+	F_0 - \frac{\chi_{1/2}}{h}(y_0 - y_1) - \frac{h}{4}\left(p_0 y_0 + \frac{p_0 + p_1}{2} \frac{y_0 + y_1}{2}\right) + \frac{h}{4} \left(f_0 + \frac{f_0 + f_1}{2} \right) = 0
+\]
+
+Приведём полученное выражение
+
+\[
+	K_0 y_0 + M_0 y_1 = P_0 \quad \text{где}
+\]
+
+\begin{itemize}
+\item $K_0 = \chi_{1/2} + \frac{h^2}{8} (\frac{p_0 + p_1}{2}) + \frac{h^2}{4} p_0$
+\item $M_0 =  \frac{h^2}{8} (\frac{p_0 + p_1}{2}) - \chi_{1/2}$
+\item $P_0 = h F_0 + \frac{h^2}{4}(\frac{f_0 + f_1}{2} + f_0)$
+\end{itemize}
+
+Тривиальная запись краевого условия
+
+\[
+	- k_0 \frac{y_1 - y_0}{h} = F_0
+\]
+
+\[
+	\chi_{1/2} y_0 - \chi_{1/2} y_1 = h F_0
+\]
+
+\[
+	- \chi_{1/2} \frac{y_1 - y_0}{h} = F_0
+\]
+
+
+
+\subsection{Лабораторная работа 3}
+
+Построить разностную схему, найти решение, построить график.
+
+Имеется цилиндр. К цилиндру подводится тепловой поток $F_0$. В свою очередь цилиндр обтекается воздухом. Найти температуру распределения в цилиндре.
+
+\[
+	- \div F + q = 0
+\]
+\[
+	- \left(\frac{1}{r} \frac{d}{dr} (r F_r) + \frac{d}{dz} F_x\right) + q = 0
+\]
+\[
+	- \frac{dF_x}{dx} + q = 0, \quad F_x = - \lambda(x) \frac{dT}{dx}
+\]
+\[
+	\frac{d}{dx}(\lambda (x) \frac{dT}{dx}) + q = 0
+\]
+\[
+	q = - \frac{2\pi R \cdot \alpha(T - T_{0c}) l}{\pi R^2 l} = - \frac{2}{R} \alpha (T - T_{0c}), \quad [\alpha] = \frac{\text{Вт}}{cm^2 \cdot k}
+\]
+Окончательно
+\[
+\frac{d}{dx}(\lambda(x) \frac{dT}{dx}) - \frac{2}{R} \alpha T + \frac{2}{R}\alpha T_{0c} = 0
+\]
+\[
+	\lambda(x) = k(x), \quad P(x) = \frac{2}{R}\alpha, \quad f(x) = \frac{2}{R}\alpha T_{0c}
+\]
+\[
+	\lambda(x) = \frac{a}{x - b}, \quad x = 0, \lambda = \lambda_0, \alpha = \alpha_0 \rightarrow b = \frac{k_n l}{k_N - k_0}; x = l, \lambda = \lambda_N, \alpha = \alpha_N
+\]
+\[
+	\alpha(x) = \frac{c}{x - a}
+\]
+
+\paragraph{Граничные условия}
+
+\begin{align*}
+\begin{cases}
+x = 0, -\lambda \frac{dT}{dx} = F_0\\
+x = l, -\lambda \frac{dT}{dx} = \alpha_N(T(l) - T_{0c})
+\end{cases}
+\end{align*}
+
+\paragraph{Исходные данные}
+
+\begin{itemize}
+	\item $R, l$
+	\item $T_{0c}$
+	\item $k_0, k_N, \alpha_0, \alpha_N$
+	\item $F_0$
+\end{itemize}
+
+\paragraph{Найти} $T(x)$
+
+\paragraph{Для отладки}
+\[
+k_0 = 0.1 \frac{vt}{cm \cdot k}
+\]
+\[
+k_N = 0.2
+\]
+\[
+l = 10 cm
+\]
+\[
+R = 0.5 cm
+\]
+\[
+T_{0c} = 300K
+\]
+\[
+F_0 = 15 \frac{vt}{cm^2}
+\]
+\[
+\alpha_0 = 0.001 \frac{vt}{cm^2 K}
+\]
+\[
+\alpha_N = 0.02 \frac{vt}{cm^2 K}
+\]
+
+\paragraph{Вариант решения нелинейного уравнения}
+
+\[
+A_n(y_{n-1}, y_n) y_{n-1} - B_n(y_{n-1}, y_n, y_{n+1}) y_n + C_n (y_n, y_{n+1}) y_{n+1} = -F_n
+\]
+
+\subparagraph{Способ 1. Простые итерации}
+
+\[
+A_n\left(y^{(s-1)}_{n-1}, y^{(s-1)}_n\right) y^{(s)}_{n-1} - B_n\left(y^{(s-1)}_{n-1}, y^{(s-1)}_n, y^{(s-1)}_{n+1}\right) y^{(s)}_n + C_n \left(y^{(s-1)}_n, y^{(s-1)}_{n+1}\right) y^{(s)}_{n+1} = -F_n
+\]
+
+\[
+\max\limits_{0 \leq n \leq N} \left| \frac{T^{(s)}_n - T^{(s-1)}_n}{T^{(s)}_n} \right| \leq \varepsilon
+\]
+
+\subparagraph{Способ 2. Метод Ньютона}
+
+\[
+	f(x_1, x_2, x_3) = 0
+\]
+\[
+	f\left(x^{(s)}_1, x^{(s)}_2, x^{(s)}_3\right) + \sum_{k = 1}^{s} \frac{\delta f^{(s)}}{\delta x_k} \underbrace{\left(x^{(s - 1)}_{k} - x^{(s)}_{k}\right)}_{\Delta x^{(s)}_k} = 0
+\]
+
+\[
+\sum_{k = 1}^{s} \frac{\delta f^{(s)}}{\delta x_k} \Delta x^{(s)}_k = - f\left(x^{(s)}_1, x^{(s)}_2, x^{(s)}_3\right)
+\]
+
+\[
+x^{(s+1)}_k = x^{(s)}_k \Delta x^{(s)}_k, \quad k = 1, 2, 3, \dots
+\]
+
+\[\]
